--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
           <span>Account</span>
         </a>
         <a href="cart.html" class="cart-wrapper js-cart-wrapper">
-          <i class="ri-shopping-bag-line icon--small">
-            <div class="cart-bridge">
-              <div class="cart-bridge-arrow"></div>
-            </div>
+            <i class="ri-shopping-bag-line icon--small">
             <nav class="cart-navbar js-cart-navbar">
               <div class="cart-content js-cart-content">
                 <div class="cart-box">
@@ -116,25 +113,25 @@
         <div class="search-hint">
           <p>Trending Searches:</p>
           <div>
-            <a href="">
+            <a href="categories.html">
               <i class="ri-search-line"></i>
               Jeans
             </a>
           </div>
           <div>
-            <a href="">
+            <a href="categories.html">
               <i class="ri-search-line"></i>
               Jackets
             </a>
           </div>
           <div>
-            <a href="">
+            <a href="categories.html">
               <i class="ri-search-line"></i>
               Bags
             </a>
           </div>
           <div>
-            <a href="">
+            <a href="categories.html">
               <i class="ri-search-line"></i>
               Hoodie
             </a>
@@ -150,28 +147,28 @@
             <img src="pictures/display-products/female-model.jpg" alt="">
             <div class="categories-name">
               <p>Women</p>
-              <a href="">Shop now</a>
+              <a href="categories.html">Shop now</a>
             </div>
           </div>
           <div class="categories-item">
             <img src="pictures/display-products/male-model.jpg" alt="">
             <div class="categories-name">
               <p>Men</p>
-              <a href="">Shop now</a>
+              <a href="categories.html">Shop now</a>
             </div>
           </div>
           <div class="categories-item">
             <img src="pictures/display-products/children-model.jpg" alt="">
             <div class="categories-name">
               <p>Kids</p>
-              <a href="">Shop now</a>
+              <a href="categories.html">Shop now</a>
             </div>
           </div>
           <div class="categories-item">
             <img src="pictures/display-products/home-decoration.jpg" alt="">
             <div class="categories-name">
               <p>Home</p>
-              <a href="">Shop now</a>
+              <a href="categories.html">Shop now</a>
             </div>
           </div>
         </div>
@@ -186,31 +183,31 @@
       </div>
       <ul class="nav--categories">
         <li>
-          <span for="btn-1">Women</span>
+          <span for="btn-1"><a href="categories.html">Women</a></span>
           <i class="ri-arrow-right-s-line"></i>
         </li>
         <li>
-          <span>Men</span>
+          <span><a href="categories.html">Men</a></span>
           <i class="ri-arrow-right-s-line"></i>
         </li>
         <li>
-          <span>Kids & Baby</span>
+          <span><a href="categories.html">Kids & Baby</a></span>
           <i class="ri-arrow-right-s-line"></i>
         </li>
         <li>
-          <span>Home</span>
+          <span><a href="categories.html">Home</a></span>
           <i class="ri-arrow-right-s-line"></i>
         </li>
         <li>
-          <span>Gifts</span>
+          <span><a href="categories.html">Gifts</a></span>
           <i class="ri-arrow-right-s-line"></i>
         </li>
         <li>
-          <span>New</span>
+          <span><a href="categories.html">New</a></span>
           <i class="ri-arrow-right-s-line"></i>
         </li>
         <li>
-          <span>Sale</span>
+          <span><a href="categories.html">Sale</a></span>
           <i class="ri-arrow-right-s-line"></i>
         </li>
       </ul>
