--- a/product-detail.html
+++ b/product-detail.html
@@ -241,21 +241,21 @@
         <div class="product-detail-image">
           <div class="detail-image-left">
             <div>
-              <img src="pictures/products/jacket-man-1.1.jpg" alt="">
+              <img src="pictures/products/jacket-women-1.1.jpg" alt="">
             </div>
             <div>
-              <img src="pictures/products/jacket-man-1.2.jpg" alt="">
+              <img src="pictures/products/jacket-women-1.2.jpg" alt="">
             </div>
             <div>
-              <img src="pictures/products/jacket-man-1.3.jpg" alt="">
+              <img src="pictures/products/jacket-women-1.3.jpg" alt="">
             </div>
             <div>
-              <img src="pictures/products/jacket-man-1.4.jpg" alt="">
+              <img src="pictures/products/jacket-women-1.4.jpg" alt="">
             </div>
 
           </div>
           <div class="detail-image-right">
-            <img src="pictures/products/jacket-man-1.1.jpg" alt="">
+            <img src="pictures/products/jacket-women-1.1.jpg" alt="">
           </div>
         </div>
       </div>
@@ -263,16 +263,24 @@
       <div class="product-detail-summary">
         <div class="detail-summary">
           <div class="summary-name">
-            <p>LEATHER BIKER JACKET</p>
-            <p class="detail-price">$100</p>
+            <p>WATER AND WIND PROTECTION CROPPED PUFFER ANORAK</p>
+            <p class="detail-price">$49</p>
           </div>
           <div class="summary-color">
             <div>
               <p>Color</p>
-              <p>Blue</p>
+              <p style="font-weight: 600;">Ecru</p>
             </div>
-            <div>
-              <img src="pictures/products/jacket-man-1.3.jpg" alt="">
+            <div class="summary-color-item">
+              <div>
+                <img src="pictures/products/jacket-women-1.2.jpg" alt="">
+              </div>
+              <div>
+                <img src="pictures/products/jacket-women-1.2-black.jpg" alt="">
+              </div>
+              <div>
+                <img src="pictures/products/jacket-women-1.2-khaki.jpg" alt="">
+              </div>
             </div>
           </div>
           <div class="summary-size">
@@ -283,9 +291,11 @@
             <div>
               <p class="product-size-guide">Size Guide</p>
               <div class="product-size">
+                <div>XS</div>
                 <div>S</div>
                 <div>M</div>
                 <div>L</div>
+                <div>XL</div>
               </div>
             </div>
           </div>
@@ -293,17 +303,16 @@
             <button>Add to cart</button>
           </div>
           <div>
-            <pre>Leather jacket (100% sheep leather)
+            <pre>Puffer anorak (100% polyester)
 
-  - Lapel collar and long sleeves 
-  - Jetted hip pockets and inside pocket 
-  detail 
-  - Contrast embroidery on the front and 
-  back. 
-  - Ribbed trims 
-  - Snap-button front fastening
-  
-  Made in Pakistan
+  - Long sleeves with inner cuffs 
+  - Front welt pockets with fleece lining and 
+  zip fastening
+  - Adjustable hem with elastic interior 
+  drawstrings 
+  - Zip-up front
+
+  Made in Myanmar
 </pre>
           </div>
         </div>
@@ -315,7 +324,7 @@
               <i class="ri-arrow-down-s-line"></i>
             </div>
             <p>
-              Model is 1m89 / 6'2" and wearing a size M.
+              Model is 1m75 / 5'7" and wearing a size L.
             </p>
           </div>
           <div class="reference-title">
@@ -339,30 +348,30 @@
         <div class="products-perfect-partner">
           <div class="perfect-partner">
             <a href="#">
-              <img src="pictures/products/jeans-man.jpg" alt="">
-              <p>CONTRAST FADED JEANS</p>
-              <p class="detail-price">$49</p>
+              <img src="pictures/products/shoes-woman.jpg" alt="">
+              <p>LEATHER TRACK SOLE KNEE-HIGH BOOTS</p>
+              <p class="detail-price">$119</p>
             </a>
           </div>
           <div class="perfect-partner">
             <a href="#">
-              <img src="pictures/products/shoes-man.jpg" alt="">
-              <p>CHELSEA BOOTS WITH CHUNKY TRACK SOLES</p>
-              <p class="detail-price">$50</p>
+              <img src="pictures/products/skirt-women.jpg" alt="">
+              <p>LONG WOOL AND ALPACA BLEND KNIT SKIRT</p>
+              <p class="detail-price">$46</p>
             </a>
           </div>
           <div class="perfect-partner">
             <a href="#">
-              <img src="pictures/products/hat-man.jpg" alt="">
-              <p>RIBBED KNIT BEANIE</p>
+              <img src="pictures/products/sweater-women.jpg" alt="">
+              <p>KNIT SWEATER WITH TRIMS</p>
+              <p class="detail-price">$35</p>
+            </a>
+          </div>
+          <div class="perfect-partner">
+            <a href="#">
+              <img src="pictures/products/hat-women.jpg" alt="">
+              <p>KNIT BEANIE</p>
               <p class="detail-price">$16</p>
-            </a>
-          </div>
-          <div class="perfect-partner">
-            <a href="#">
-              <img src="pictures/products/shirt-man.jpg" alt="">
-              <p>COMPACT SWEATSHIRT</p>
-              <p class="detail-price">$26</p>
             </a>
           </div>
 
@@ -376,28 +385,30 @@
         <div class="products-perfect-partner">
           <div class="perfect-partner">
             <a href="#">
-              <img src="pictures/products/jacket-man-2.jpg" alt="">
-              <p>DIAMOND JACQUARD JACKET</p>
-              <p class="detail-price">$90</p>
+              <img src="pictures/products/jacket-women-2.jpg" alt="">
+              <p>CROPPED FAUX SHEARLING PUFFER JACKET</p>
+              <p class="detail-price">$60</p>
             </a>
           </div>
           <div class="perfect-partner">
             <a href="#">
-              <img src="pictures/products/jacket-man-3.jpg" alt="">
-              <p>TEXTURED PUFFER JACKET</p>
-              <p class="detail-price">$49</p>
-            </a>
-          </div>
-          <div class="perfect-partner">
-            <a href="#">
-              <img src="pictures/products/jacket-man-4.jpg" alt="">
-              <p>FAUX LEATHER BOMBER JACKET</p>
+              <img src="pictures/products/jacket-women-3.jpg" alt="">
+              <p>ZW COLLECTION DOUBLE-FACED WAISTCOAT</p>
               <p class="detail-price">$70</p>
+            </a>
+          </div>
+          <div class="perfect-partner">
+            <a href="#">
+              <img src="pictures/products/jacket-women-4.jpg" alt="">
+              <p>ZW COLLECTION CONTRAST WOOL BLEND TRENCH COAT</p>
+              <p class="detail-price">$89</p>
             </a>
           </div>
         </div>
       </div>
+    </div>
   </main>
+
   <footer>
     <div class="footer-top">
       <div>
