commit for lab1 (3)

--- a/categories.html
+++ b/categories.html
@@ -259,7 +259,7 @@
                                     <div class="container wide">
                                         <div class="wrap">
                                             
-                                            <h3 class="title">Feel the tosca color</h3>
+                                            <h3 class="title">Find your style</h3>
                                             <div class="button"><a href="" class="primary-btn">Shop now</a></div>
                                         </div>
                                     </div>
@@ -275,7 +275,7 @@
                                     <div class="container wide">
                                         <div class="wrap">
                                             
-                                            <h3 class="title">Feel the tosca color</h3>
+                                            <h3 class="title">Feel the difference</h3>
                                             <div class="button"><a href="" class="primary-btn">Shop now</a></div>
                                         </div>
                                     </div>
