done categories.js dropdowcart

--- a/categories.html
+++ b/categories.html
@@ -42,57 +42,20 @@
                     <span>Account</span>
                 </a>
                 <a href="cart.html" class="cart-wrapper js-cart-wrapper">
-                    <i class="ri-shopping-bag-line icon--small">
+                    <i class="ri-shopping-bag-line icon--small" data-content="0">
                         <nav class="cart-navbar js-cart-navbar">
                             <div class="cart-content js-cart-content">
-                                <div class="cart-box">
-                                    <div class="cart-image">
-                                        <img src="pictures/display-products/zara-women-shirt.jpg">
-                                    </div>
-                                    <div class="cart-info">
-                                        <p>Shirt With Thin Stripes</p>
-                                        <p>COLOR: <span>red</span></p>
-                                        <p>SIZE: <span>One Size</span></p>
-                                        <p>QTY: <span>1</span></p>
-                                        <p>$<span>63</span></p>
-                                    </div>
-                                </div>
-
-                                <div class="cart-box">
-                                    <div class="cart-image">
-                                        <img src="pictures/display-products/hm-woman-belt.jpg">
-                                    </div>
-                                    <div class="cart-info">
-                                        <p>3-pack Narrow Belts</p>
-                                        <p>COLOR: <span>yellow</span></p>
-                                        <p>SIZE: <span>One Size</span></p>
-                                        <p>QTY: <span>1</span></p>
-                                        <p>$<span>9</span></p>
-                                    </div>
-                                </div>
-
-                                <div class="cart-box">
-                                    <div class="cart-image">
-                                        <img src="pictures/display-products/hm-baby-set.jpg">
-                                    </div>
-                                    <div class="cart-info">
-                                        <p>2-piece Cotton Set</p>
-                                        <p>COLOR: <span>white</span></p>
-                                        <p>SIZE: <span>One Size</span></p>
-                                        <p>QTY: <span>1</span></p>
-                                        <p>$<span>15</span></p>
-                                    </div>
-                                </div>
+                                
                             </div>
 
                             <div class="cart-calculate-price">
                                 <div class="cart-price">
                                     <p>Subtotal:</p>
-                                    <p>$87</p>
+                                    <p>$<span></span></p>
                                 </div>
                                 <div class="cart-checkout">
                                     CHECKOUT
-                                    <span>(3)</span>
+                                    (<span></span>)
                                 </div>
                             </div>
                         </nav>
@@ -579,7 +542,7 @@
         </div>
     </footer>
 
-    <script src="scripts/index.js"></script>
+    <script type="module" src="scripts/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script type="module" src="scripts/categories.js"></script>
 </body>
