--- a/product-detail.html
+++ b/product-detail.html
@@ -42,57 +42,20 @@
           <span>Account</span>
         </a>
         <a href="cart.html" class="cart-wrapper js-cart-wrapper">
-            <i class="ri-shopping-bag-line icon--small">
+          <i class="ri-shopping-bag-line icon--small" data-content="0">
             <nav class="cart-navbar js-cart-navbar">
               <div class="cart-content js-cart-content">
-                <div class="cart-box">
-                  <div class="cart-image">
-                    <img src="pictures/display-products/zara-women-shirt.jpg">
-                  </div>
-                  <div class="cart-info">
-                    <p>Shirt With Thin Stripes</p>
-                    <p>COLOR: <span>red</span></p>
-                    <p>SIZE: <span>One Size</span></p>
-                    <p>QTY: <span>1</span></p>
-                    <p>$<span>63</span></p>
-                  </div>
-                </div>
 
-                <div class="cart-box">
-                  <div class="cart-image">
-                    <img src="pictures/display-products/hm-woman-belt.jpg">
-                  </div>
-                  <div class="cart-info">
-                    <p>3-pack Narrow Belts</p>
-                    <p>COLOR: <span>yellow</span></p>
-                    <p>SIZE: <span>One Size</span></p>
-                    <p>QTY: <span>1</span></p>
-                    <p>$<span>9</span></p>
-                  </div>
-                </div>
-
-                <div class="cart-box">
-                  <div class="cart-image">
-                    <img src="pictures/display-products/hm-baby-set.jpg">
-                  </div>
-                  <div class="cart-info">
-                    <p>2-piece Cotton Set</p>
-                    <p>COLOR: <span>white</span></p>
-                    <p>SIZE: <span>One Size</span></p>
-                    <p>QTY: <span>1</span></p>
-                    <p>$<span>15</span></p>
-                  </div>
-                </div>
               </div>
 
               <div class="cart-calculate-price">
                 <div class="cart-price">
                   <p>Subtotal:</p>
-                  <p>$87</p>
+                  <p>$<span></span></p>
                 </div>
                 <div class="cart-checkout">
                   CHECKOUT
-                  <span>(3)</span>
+                  (<span></span>)
                 </div>
               </div>
             </nav>
@@ -255,92 +218,13 @@
 
           </div>
           <div class="detail-image-right">
-            <img src="pictures/products/jacket-women-1.1.jpg" alt="">
+            
           </div>
         </div>
       </div>
 
       <div class="product-detail-summary">
-        <div class="detail-summary">
-          <div class="summary-name">
-            <p>WATER AND WIND PROTECTION CROPPED PUFFER ANORAK</p>
-            <p class="detail-price">$49</p>
-          </div>
-          <div class="summary-color">
-            <div>
-              <p>Color</p>
-              <p style="font-weight: 600;">Ecru</p>
-            </div>
-            <div class="summary-color-item">
-              <div>
-                <img src="pictures/products/jacket-women-1.2.jpg" alt="">
-              </div>
-              <div>
-                <img src="pictures/products/jacket-women-1.2-black.jpg" alt="">
-              </div>
-              <div>
-                <img src="pictures/products/jacket-women-1.2-khaki.jpg" alt="">
-              </div>
-            </div>
-          </div>
-          <div class="summary-size">
-            <div>
-              Size
-              <i class="ri-arrow-down-s-line"></i>
-            </div>
-            <div>
-              <p class="product-size-guide">Size Guide</p>
-              <div class="product-size">
-                <div>XS</div>
-                <div>S</div>
-                <div>M</div>
-                <div>L</div>
-                <div>XL</div>
-              </div>
-            </div>
-          </div>
-          <div class="summary-button">
-            <button>Add to cart</button>
-          </div>
-          <div>
-            <pre>Puffer anorak (100% polyester)
-
-  - Long sleeves with inner cuffs 
-  - Front welt pockets with fleece lining and 
-  zip fastening
-  - Adjustable hem with elastic interior 
-  drawstrings 
-  - Zip-up front
-
-  Made in Myanmar
-</pre>
-          </div>
-        </div>
-
-        <div class="detail-reference">
-          <div class="reference-title">
-            <div>
-              PRODUCTS DETAILS
-              <i class="ri-arrow-down-s-line"></i>
-            </div>
-            <p>
-              Model is 1m75 / 5'7" and wearing a size L.
-            </p>
-          </div>
-          <div class="reference-title">
-            <div>
-              CARE
-              <i class="ri-arrow-down-s-line"></i>
-            </div>
-            <p>
-              Do not wash <br>
-              Do not use bleach <br>
-              Do not iron <br>
-              Do not dry clean <br>
-              Do not tumble dry
-            </p>
-          </div>
-        </div>
+       
       </div>
 
       <div class="product-detail-partner">
@@ -457,7 +341,8 @@
       </div>
     </div>
   </footer>
-  <script src="scripts/index.js"></script>
+  <script type="module" src="scripts/index.js"></script>
+  <script type="module" src="scripts/product-detail.js"></script>
 </body>
 
 </html>
