--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
         <div class="first-introduce-left">
           <div class="introduce-left-container">
             <a href="">
-              <img src="pictures/display-products/man-model.jpg" alt="">
+              <img src="pictures/display-products/zara-man-jacket.jpg" alt="">
             </a>
             <div class="first-introduce-left-info">
-              <p>Private Signature</p>
+              <p>Private New</p>
               <a href="">SHOP NOW</a>
             </div>
           </div>
@@ -256,12 +256,12 @@
           <div class="first-introduce-right-cardstack">
             <div class="cardstack">
               <div class="cardstack-picture">
-                <div class="card-slide">
+                <div class="card-slide active">
                   <a href="">
-                    <img src="pictures/display-products/female-model-big.jpg" alt="">
+                    <img src="pictures/display-products/zara-women-blazer.jpg" alt="">
                   </a>
                   <div class="card-slide-info">
-                    <p>Women Dress</p>
+                    <p>Blazer Shop</p>
                     <div>
                       <span>1 </span>|
                       <span>4</span>
@@ -275,10 +275,10 @@
                 <div class="card-slide">
                   <div class="card-slide-box">
                     <a href="">
-                      <img src="pictures/display-products/female-japanese-small.jpg" alt="">
+                      <img src="pictures/display-products/zara-women-dress.jpg" alt="">
                     </a>
                     <div class="card-slide-info">
-                      <p>Women Dress</p>
+                      <p>Dress Shop</p>
                       <div>
                         <span>2 </span>|
                         <span>4</span>
@@ -293,10 +293,10 @@
                 <div class="card-slide">
                   <div class="card-slide-box">
                     <a href="">
-                      <img src="pictures/display-products/female-model-big.jpg" alt="">
+                      <img src="pictures/display-products/zara-women-jeans.jpg" alt="">
                     </a>
                     <div class="card-slide-info">
-                      <p>Women Dress</p>
+                      <p>Jeans Shop</p>
                       <div>
                         <span>3 </span>|
                         <span>4</span>
@@ -311,10 +311,10 @@
                 <div class="card-slide">
                   <div class="card-slide-box">
                     <a href="">
-                      <img src="pictures/display-products/female-japanese-small.jpg" alt="">
+                      <img src="pictures/display-products/zara-women-shirt-2.jpg" alt="">
                     </a>
                     <div class="card-slide-info">
-                      <p>Blazer Shop</p>
+                      <p>Shirt Shop</p>
                       <div>
                         <span>4 </span>|
                         <span>4</span>
@@ -325,18 +325,19 @@
                     <div class="cardstack-timer-run"></div>
                   </div>
                 </div>
-                <div class="cardstack-btn">
-                  <div class="btn arrow-right">
-                    <i class="ri-arrow-right-s-line"></i>
-                  </div>
+              </div>
 
-                  <div class=" btn arrow-left">
-                    <i class="ri-arrow-left-s-line"></i>
-                  </div>
+              <div class="cardstack-btn">
+                <div class="btn arrow-right">
+                  <i class="ri-arrow-right-s-line"></i>
+                </div>
 
-                  <div class="btn pause">
-                    <i class="ri-pause-mini-line"></i>
-                  </div>
+                <div class="btn arrow-left">
+                  <i class="ri-arrow-left-s-line"></i>
+                </div>
+
+                <div class="btn pause">
+                  <i class="ri-pause-mini-line"></i>
                 </div>
               </div>
             </div>
@@ -521,7 +522,7 @@
     </div>
   </footer>
   <script src="scripts/index.js"></script>
-  <script src="scripts/indexBody.js"></script>
+  <script src="scripts/index-body.js"></script>
 </body>
 
 </html>
