--- a/cart.html
+++ b/cart.html
@@ -200,7 +200,7 @@
             <div class="l-container">
                 <div class="l-top-container">
                     <p>Personalized Shopping Experience With an RL Account</p>
-                    <p><a href="">Sign In</a> or <a href="">Create an Account</a> for complimentary shipping on your
+                    <p><a href="account.html">Sign In</a> or <a href="account.html">Create an Account</a> for complimentary shipping on your
                         orders (<span>Details</span>)</p>
                 </div>
                 <div class="items-cart">
