update cart.js checkout.js product-detail.js

--- a/cart.html
+++ b/cart.html
@@ -204,129 +204,7 @@
                         orders (<span>Details</span>)</p>
                 </div>
                 <div class="items-cart">
-                    <div class="item-wrapper">
-                        <div>
-                            <img src="pictures/display-products/children-model.jpg" alt="" width="100%">
-                        </div>
-                        <div>
-                            <div class="item-attb">
-                                <a href="#">Shirt With Thin Stripes</a>
-                                <p>Color: <span>Red</span></p>
-                                <p>Size: <span>One size</span></p>
-                                <p>#<span>027782647</span></p>
-                            </div>
-                            <p class="item-sale">Enjoy 30% Off Select Styles</p>
-                            <div class="item-quantity">
-                                <button>-</button>
-                                <p>QTY: <span>1</span></p>
-                                <button>+</button>
-                            </div>
-                            <div class="delivery-shipping-container">
-                                <button>DELIVERY</button><button>VOUCHER</button>
-                                <p><i class="ri-truck-line"></i>Standard Shipping Receive by <span>Friday, October
-                                        20</span></p>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="item-interact">
-                                <a href="product-detail.html"><i class="ri-pencil-line"></i></a>
-                                <i class="ri-heart-line"></i>
-                                <i class="ri-close-line"></i>
-                            </div>
-                            <div class="price-container">
-                                <p>$<span class="price-cart">63</span></p>
-                                <div class="inf-sale">
-                                    <div>
-                                        <p class="item-sale">Enjoy 30% Off Select Styles</p>
-                                        <p>-$<span class="price-sale">19</span></p>
-                                    </div>
-                                </div>
-                                <p>$<span class="total-cart">44</span></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item-wrapper">
-                        <div>
-                            <img src="pictures/display-products/male-model.jpg" alt="" width="100%">
-                        </div>
-                        <div>
-                            <div class="item-attb">
-                                <a href="#">3-pack Narrow Belts</a>
-                                <p>Color: <span>Yelow</span></p>
-                                <p>Size: <span>One Size</span></p>
-                                <p>#<span>6712631</span></p>
-                            </div>
-                            <p class="item-sale">Enjoy 30% Off Select Styles</p>
-                            <div class="item-quantity">
-                                <button>-</button>
-                                <p>QTY: <span>1</span></p>
-                                <button>+</button>
-                            </div>
-                            <div class="delivery-shipping-container">
-                                <button>DELIVERY</button><button>VOUCHER</button>
-                                <p><i class="ri-truck-line"></i>Standard Shipping Receive by <span>Friday, October
-                                        20</span></p>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="item-interact">
-                                <a href="product-detail.html"><i class="ri-pencil-line"></i></a>
-                                <i class="ri-heart-line"></i>
-                                <i class="ri-close-line"></i>
-                            </div>
-                            <div class="price-container">
-                                <p>$<span class="price-cart">9</span></p>
-                                <div class="inf-sale">
-                                    <div>
-                                        <p class="item-sale">Enjoy 30% Off Select Styles</p>
-                                        <p>-$<span class="price-sale">2.7</span></p>
-                                    </div>
-                                </div>
-                                <p>$<span class="total-cart">6.3</span< /p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item-wrapper">
-                        <div>
-                            <img src="pictures/display-products/hm-baby-set.jpg" alt="" width="100%">
-                        </div>
-                        <div>
-                            <div class="item-attb">
-                                <a href="#">2-piece Cotton Set</a>
-                                <p>Color: <span>White</span></p>
-                                <p>Size: <span>One size</span></p>
-                                <p>#<span>02143872</span></p>
-                            </div>
-                            <p class="item-sale">Enjoy 30% Off Select Styles</p>
-                            <div class="item-quantity">
-                                <button>-</button>
-                                <p>QTY: <span>1</span></p>
-                                <button>+</button>
-                            </div>
-                            <div class="delivery-shipping-container">
-                                <button>DELIVERY</button><button>VOUCHER</button>
-                                <p><i class="ri-truck-line"></i>iStandard Shipping Receive by <span>Friday, October
-                                        20</span></p>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="item-interact">
-                                <a href="product-detail.html"><i class="ri-pencil-line"></i></a>
-                                <i class="ri-heart-line"></i>
-                                <i class="ri-close-line"></i>
-                            </div>
-                            <div class="price-container">
-                                <p>$<span class="price-cart">15</span></p>
-                                <div class="inf-sale">
-                                    <div>
-                                        <p class="item-sale">Enjoy 30% Off Select Styles</p>
-                                        <p>-$<span class="price-sale">4.5</span></p>
-                                    </div>
-                                </div>
-                                <p>$<span class="total-cart">10.5</span></p>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- data -->
                 </div>
 
             </div>
@@ -337,15 +215,7 @@
                 </div>
                 <div>
                     <div class="inf-order">
-                        <p>Subtotal</p>
-                        <p>$<span>60.8</span></p>
-                        <p>Standard Shipping</p>
-                        <p>$<span>2</span></p>
-                        <p>Free when you <a href="">Sign in</a> or <a href="">Create an Account</a></p>
-                        <p></p>
-                        <p>Estimated Total</p>
-                        <p>$<span>58.8</span></p>
-                        <p>Taxes finalized at the end of checkout</p>
+                        <!-- data -->
                     </div>
                     <div class="promo-code-wrapper">
                         <span>Apply Promo Code</span>
@@ -354,7 +224,7 @@
                         </i>
                     </div>
                     <div class="checkout-wapper">
-                        <button onclick="window.location.href= 'checkout.html'">PROCEED TO CHECKOUT</button>
+                        <button>PROCEED TO CHECKOUT</button>
                     </div>
                 </div>
             </div>
@@ -410,6 +280,7 @@
         </div>
     </footer>
     <script type="module" src="scripts/index.js"></script>
+    <script type="module" src="scripts/cart.js"></script>
 </body>
 
 </html>
