--- a/checkout.html
+++ b/checkout.html
@@ -260,13 +260,13 @@
                     <div>
                         <div class="inf-order">
                             <p>Subtotal</p>
-                            <p>$<span>60.8</span></p>
+                            <p>$<span>0</span></p>
                             <p>Standard Shipping</p>
-                            <p>$<span>2</span></p>
+                            <p>$<span>0</span></p>
                             <p>Free when you <a href="">Sign in</a> or <a href="">Create an Account</a></p>
                             <p></p>
                             <p>Estimated Total</p>
-                            <p>$<span>58.8</span></p>
+                            <p>$<span>0</span></p>
                             <p>Taxes finalized at the end of checkout</p>
                         </div>
                         <div class="checkout-wapper">
@@ -327,7 +327,8 @@
             </div>
         </div>
     </footer>
-    <script src="scripts/index.js"></script>
+    <script type="module" src="scripts/index.js"></script>
+    <script src="scripts/checkout.js"></script>
 </body>
 
 </html>
