herf data page women and btn-back

--- a/index.html
+++ b/index.html
@@ -146,31 +146,31 @@
         </div>
         <ul class="nav--categories">
             <li>
-                <span for="btn-1"><a href="categories.html">Women</a></span>
+                <span for="btn-1"><a href="categories.html?data=Women">Women</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
-                <span><a href="categories.html">Men</a></span>
+                <span><a href="categories.html?data=men">Men</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
-                <span><a href="categories.html">Kids & Baby</a></span>
+                <span><a href="categories.html?data=kidsandbaby">Kids & Baby</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
-                <span><a href="categories.html">Home</a></span>
+                <span><a href="categories.html?data=home">Home</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
-                <span><a href="categories.html">Gifts</a></span>
+                <span><a href="categories.html?data=gifts">Gifts</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
-                <span><a href="categories.html">New</a></span>
+                <span><a href="categories.html?data=new">New</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
-                <span><a href="categories.html">Sale</a></span>
+                <span><a href="categories.html?data=sale">Sale</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
         </ul>
